--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
     </nav>
 <!-- Carousel -->
-  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel" style="margin: 20px;">
+  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel" style="margin: 20px 0;">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -114,7 +114,12 @@
     </button>
   </div>
   <!-- Products -->
-  <div class="container bg-dark">
+  <div class="container marketing">
+    <h2 class="section-title text-center my-5">THE DEBUT COLLECTION</h2>
+    
+    <hr class="featurette-divider">
+</div>
+  <div class="container bg-dark" style="padding-top: 20px; width: 100%;">
     <div class="row text-center mb-5">
         <div class="col-lg-4">
             <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="images/graffiti.webp" role="img" alt="The Graffiti Tee">
