--- a/test.html
+++ b/test.html
@@ -111,7 +111,7 @@
     <div class="row text-center">
         <div class="col-md-4 mb-4">
             <div class="card border-0">
-                <img src="images/t1.jpeg" class="card-img-top" alt="Men's Fashion">
+                <img src="images/pexels-davidgomes-2479830.jpg" class="card-img-top" alt="Men's Fashion" height="600">
                 <div class="card-body">
                     <h5 class="card-title">Men</h5>
                     <a href="men.html" class="btn btn-outline-dark">Shop Now</a>
@@ -120,7 +120,7 @@
         </div>
         <div class="col-md-4 mb-4">
             <div class="card border-0">
-                <img src="images/t2.jpeg" class="card-img-top" alt="Women's Fashion">
+                <img src="images/women.jpg" class="card-img-top" alt="Women's Fashion" height="600">
                 <div class="card-body">
                     <h5 class="card-title">Women</h5>
                     <a href="women.html" class="btn btn-outline-dark">Shop Now</a>
@@ -129,9 +129,9 @@
         </div>
         <div class="col-md-4 mb-4">
             <div class="card border-0">
-                <img src="images/streetwear.jpg" class="card-img-top" alt="Sale Items">
+                <img src="images/sale.jpg" class="card-img-top" alt="Sale Items">
                 <div class="card-body">
-                    <h5 class="card-title text-danger">SALE UP TO 50% OFF</h5>
+                    <h5 class="card-title text-danger">SALES UP TO 50% OFF</h5>
                     <a href="sale.html" class="btn btn-danger">Shop Sale</a>
                 </div>
             </div>
