--- a/men.html
+++ b/men.html
@@ -46,13 +46,6 @@
                     <a class="nav-link text-danger fw-bold" href="sale.html">Cart</a>
                 </li>
                  <!-- about Category -->
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">Shoes</a>
-                </li>
-                 <!-- contact Category -->
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Shoes</a>
-                </li>
             </ul>
             
             <!-- Search Form -->
@@ -81,10 +74,10 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card product-card">
-                    <img src="images/yeezy.jpeg" class="card-img-top" alt="Product 1" height="400">
+                    <img src="images/shirt.jpg" class="card-img-top" alt="Product 1" height="400">
                     <div class="card-body">
-                        <h6 class="card-title">Adidas Yeezy </h6>
-                        <p class="card-text">$999.99</p>
+                        <h6 class="card-title">Short Sleeve Shirt</h6>
+                        <p class="card-text">$29.99</p>
                         <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
@@ -121,7 +114,7 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card product-card">
-                    <img src="images/denim.webp" class="card-img-top" alt="Product 1" height="400">
+                    <img src="images/denim.webp" class="card-img-top" alt="Product 1" height="300">
                     <div class="card-body">
                         <h6 class="card-title">Baggy Denim Jeans</h6>
                         <p class="card-text">$499.99</p>
@@ -131,9 +124,9 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card product-card">
-                    <img src="images/sleeve.jpg" class="card-img-top" alt="Product 1">
+                    <img src="images/beach.jpeg" class="card-img-top" alt="Product 1">
                     <div class="card-body">
-                        <h6 class="card-title">Sleeve Crop Top</h6>
+                        <h6 class="card-title">Beach Shorts</h6>
                         <p class="card-text">$499.99</p>
                         <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
