--- a/shoes.html
+++ b/shoes.html
@@ -71,19 +71,39 @@
             <!-- Product 1 -->
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card product-card">
-                    <img src="images/bomber.webp" class="card-img-top" alt="Product 1">
+                    <img src="images/s-2.webp" class="card-img-top" alt="Product 1">
                     <div class="card-body">
-                        <h6 class="card-title">Bomber Jacket</h6>
-                        <p class="card-text">$499.99</p>
+                        <h6 class="card-title">nike</h6>
+                        <p class="card-text">$699.99</p>
                         <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card product-card">
-                    <img src="images/t3.jpeg.jpg" class="card-img-top" alt="Product 1">
+                    <img src="images/sneaker.webp" class="card-img-top" alt="Product 1">
                     <div class="card-body">
-                        <h6 class="card-title">Black lion</h6>
+                        <h6 class="card-title">nike air</h6>
+                        <p class="card-text">$299.99</p>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card product-card">
+                    <img src="images/sneaker 3-l1600.webp" class="card-img-top" alt="Product 1">
+                    <div class="card-body">
+                        <h6 class="card-title">nike</h6>
+                        <p class="card-text">$699.99</p>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card product-card">
+                    <img src="images/sneaker 4.jpg" class="card-img-top" alt="Product 1">
+                    <div class="card-body">
+                        <h6 class="card-title">Pink Jordans</h6>
                         <p class="card-text">$999.99</p>
                         <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
@@ -91,90 +111,55 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card product-card">
-                    <img src="images/t4.jpeg.jpg" class="card-img-top" alt="Product 1">
+                    <img src="images/sneaker5.jpg" class="card-img-top" alt="Product 1">
                     <div class="card-body">
-                        <h6 class="card-title">Supper Max</h6>
-                        <p class="card-text">$1599.99</p>
+                        <h6 class="card-title">Adidas</h6>
+                        <p class="card-text">$99.99</p>
                         <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card product-card">
-                    <img src="images/t5.jpeg" class="card-img-top" alt="Product 1">
+                    <img src="images/heels1.jpg" class="card-img-top" alt="Product 1">
                     <div class="card-body">
-                        <h6 class="card-title">Airforce nike</h6>
-                        <p class="card-text">$1999.99</p>
+                        <h6 class="card-title">Court shoes</h6>
+                        <p class="card-text">$299.99</p>
                         <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card product-card">
-                    <img src="images/bomber.webp" class="card-img-top" alt="Product 1">
+                    <img src="images/heels2.jpg" class="card-img-top" alt="Product 1">
                     <div class="card-body">
-                        <h6 class="card-title">Bomber Jacket</h6>
+                        <h6 class="card-title">Pointed Stiletto</h6>
+                        <p class="card-text">$399.99</p>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+            
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card product-card">
+                    <img src="images/shopping.jpg" class="card-img-top" alt="Product 1">
+                    <div class="card-body">
+                        <h6 class="card-title">Leather Loafers</h6>
                         <p class="card-text">$499.99</p>
                         <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 mb-4">
-                <div class="card product-card">
-                    <img src="images/bomber.webp" class="card-img-top" alt="Product 1">
-                    <div class="card-body">
-                        <h6 class="card-title">Bomber Jacket</h6>
-                        <p class="card-text">$499.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
-                    </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card product-card">
-                    <img src="images/bomber.webp" class="card-img-top" alt="Product 1">
+                    <img src="images/canvas.jpeg" class="card-img-top" alt="Product 1">
                     <div class="card-body">
-                        <h6 class="card-title">Bomber Jacket</h6>
-                        <p class="card-text">$499.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-4">
-                <div class="card product-card">
-                    <img src="images/bomber.webp" class="card-img-top" alt="Product 1">
-                    <div class="card-body">
-                        <h6 class="card-title">Bomber Jacket</h6>
-                        <p class="card-text">$499.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-4">
-                <div class="card product-card">
-                    <img src="images/bomber.webp" class="card-img-top" alt="Product 1">
-                    <div class="card-body">
-                        <h6 class="card-title">Bomber Jacket</h6>
-                        <p class="card-text">$499.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-4">
-                <div class="card product-card">
-                    <img src="images/bomber.webp" class="card-img-top" alt="Product 1">
-                    <div class="card-body">
-                        <h6 class="card-title">Bomber Jacket</h6>
-                        <p class="card-text">$499.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-4">
-                <div class="card product-card">
-                    <img src="images/bomber.webp" class="card-img-top" alt="Product 1">
-                    <div class="card-body">
-                        <h6 class="card-title">Bomber Jacket</h6>
-                        <p class="card-text">$499.99</p>
+                        <h6 class="card-title">Canvas</h6>
+                        <p class="card-text">199.99</p>
                         <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
