--- a/about.html
+++ b/about.html
@@ -63,6 +63,125 @@
         </div>
     </div>
 </nav>
+<!-- About Us Content -->
+<div class="container my-5">
+    <!-- Header Section -->
+    <div class="row align-items-center mb-5">
+        <div class="col-lg-6">
+            <h1 class="display-4 fw-bold">About Re-wound</h1>
+            <p class="lead">Where vintage meets modern streetwear</p>
+        </div>
+        <div class="col-lg-6">
+            <img src="images/about-hero.jpg" class="img-fluid rounded" alt="Re-wound Store" style="height: 300px; width: 100%; object-fit: cover;">
+        </div>
+    </div>
+
+    <!-- Our Story -->
+    <div class="row mb-5">
+        <div class="col-12">
+            <h2 class="text-center mb-4">Our Story</h2>
+            <p class="text-center fs-5">
+                Born from the streets and inspired by the past, Re-wound emerged as a revolution against fast fashion. 
+                We believe in quality over quantity, style over trends, and authenticity over imitation.
+            </p>
+        </div>
+    </div>
+
+    <!-- Mission & Vision -->
+    <div class="row mb-5">
+        <div class="col-md-6 mb-4">
+            <div class="card border-0 h-100">
+                <div class="card-body text-center">
+                    <h3 class="card-title">🎯 Our Mission</h3>
+                    <p class="card-text">
+                        To provide high-quality, sustainable streetwear that stands the test of time, 
+                        blending 90s nostalgia with contemporary design.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 mb-4">
+            <div class="card border-0 h-100">
+                <div class="card-body text-center">
+                    <h3 class="card-title">👁 Our Vision</h3>
+                    <p class="card-text">
+                        Creating a community where fashion lovers can express their unique style 
+                        while supporting sustainable and ethical manufacturing practices.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Our Values -->
+    <div class="row mb-5">
+        <div class="col-12">
+            <h2 class="text-center mb-4">Our Values</h2>
+            <div class="row text-center">
+                <div class="col-md-4 mb-3">
+                    <div class="p-3">
+                        <h4>🔄 Sustainable</h4>
+                        <p>Eco-friendly materials and ethical production</p>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="p-3">
+                        <h4>🎨 Creative</h4>
+                        <p>Unique designs that tell a story</p>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <div class="p-3">
+                        <h4>🤝 Community</h4>
+                        <p>Building a culture of fashion enthusiasts</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Team Section -->
+    <div class="row">
+        <div class="col-12">
+            <h2 class="text-center mb-4">Meet Our Team</h2>
+            <div class="row text-center">
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Kwesi Boadu Boafo</h5>
+                            <p class="card-text">Web Developer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Selasi Agorsor</h5>
+                            <p class="card-text">Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Asiedu Nana Kwame Asamani</h5>
+                            <h6 class="card-title">Nana Kwadwo Opoku - Bampo</h6>
+                            <p class="card-text">Content Creators</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Adnan Abdalrhman Mohamed</h5>
+                            <p class="card-text">Project Manager</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
