--- a/women.html
+++ b/women.html
@@ -46,13 +46,6 @@
                     <a class="nav-link text-danger fw-bold" href="sale.html">Cart</a>
                 </li>
                  <!-- about Category -->
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">Shoes</a>
-                </li>
-                 <!-- contact Category -->
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Shoes</a>
-                </li>
             </ul>
             
             <!-- Search Form -->
@@ -66,7 +59,7 @@
 <!-- women section -->
 <section class="bg-light py-5">
     <div class="container">
-        <h2 class="text-center mb-4">New Arrivals</h2>
+        <h2 class="text-center mb-4">Women Section</h2>
         <div class="row">
             <!-- Product 1 -->
             <div class="col-lg-3 col-md-6 mb-4">
