--- a/men.html
+++ b/men.html
@@ -59,7 +59,7 @@
 <!-- New Arrivals -->
 <section class="bg-light py-5">
     <div class="container">
-        <h2 class="text-center mb-4">New Arrivals</h2>
+        <h2 class="text-center mb-4">Men Section</h2>
         <div class="row">
             <!-- Product 1 -->
             <div class="col-lg-3 col-md-6 mb-4">
@@ -84,7 +84,7 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card product-card">
-                    <img src="images/jordan.avif" class="card-img-top" alt="Product 1" height="400">
+                    <img src="images/download (1).jpeg" class="card-img-top" alt="Product 1" height="400">
                     <div class="card-body">
                         <h6 class="card-title">Jordan 4</h6>
                         <p class="card-text">$149.99</p>
