--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="row text-center">
         <div class="col-md-4 mb-4">
             <div class="card border-0">
-                <img src="images/pexels-davidgomes-2479830.jpg" class="card-img-top" alt="Men's Fashion" height="600">
+                <img src="images/pexels-davidgomes-2479830.jpg" class="card-img-top" alt="Men's Fashion" height="400">
                 <div class="card-body">
                     <h5 class="card-title">Men</h5>
                     <a href="men.html" class="btn btn-outline-dark">Shop Now</a>
@@ -120,7 +120,7 @@
         </div>
         <div class="col-md-4 mb-4">
             <div class="card border-0">
-                <img src="images/women.jpg" class="card-img-top" alt="Women's Fashion" height="600">
+                <img src="images/women.jpg" class="card-img-top" alt="Women's Fashion" height="400">
                 <div class="card-body">
                     <h5 class="card-title">Women</h5>
                     <a href="women.html" class="btn btn-outline-dark">Shop Now</a>
@@ -129,7 +129,7 @@
         </div>
         <div class="col-md-4 mb-4">
             <div class="card border-0">
-                <img src="images/sale.jpg" class="card-img-top" alt="Sale Items">
+                <img src="images/sale.jpg" class="card-img-top" alt="Sale Items" height="400">
                 <div class="card-body">
                     <h5 class="card-title text-danger">SALES UP TO 50% OFF</h5>
                     <a href="sale.html" class="btn btn-danger">Shop Sale</a>
@@ -177,9 +177,42 @@
             <!-- Product 1 -->
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card product-card">
-                    <img src="images/bomber.webp" class="card-img-top" alt="Product 1">
+                    <img src="images/bomber.webp" class="card-img-top" alt="Product 1" height="300">
                     <div class="card-body">
                         <h6 class="card-title">Bomber Jacket</h6>
+                        <p class="card-text">$99.99</p>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Product 2 -->
+             <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card product-card">
+                    <img src="images/jacket.jpeg" class="card-img-top" alt="Product 2" height="300">
+                    <div class="card-body">
+                        <h6 class="card-title">Custom Jacket</h6>
+                        <p class="card-text">$99.99</p>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Product 3 -->
+             <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card product-card">
+                    <img src="images/graffiti.webp" class="card-img-top" alt="Product 3" height="300">
+                    <div class="card-body">
+                        <h6 class="card-title">Graffiti Tee</h6>
+                        <p class="card-text">$99.99</p>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Product 4 -->
+             <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card product-card">
+                    <img src="images/denim.webp" class="card-img-top" alt="Product 4" height="300">
+                    <div class="card-body">
+                        <h6 class="card-title">Denim Jeans</h6>
                         <p class="card-text">$99.99</p>
                         <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
