--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>RE-wound - Fashion Store</title>
 </head>
-<body style="background-image: url(images/streetwear.jpg);">
+<body>
 <!-- Navigation Header -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Main navigation">
     <div class="container-fluid">
