--- a/kids.html
+++ b/kids.html
@@ -27,7 +27,7 @@
                 </li>
                 <!-- Men's Category -->
                 <li class="nav-item">
-                    <!--<a class="nav-link" href="men.html">Men</a>-->
+                    <a class="nav-link" href="men.html">Men</a>
                 </li>
                 <!-- Women's Category -->
                 <li class="nav-item">
@@ -35,7 +35,7 @@
                 </li>
                 <!-- Kids Category -->
                 <li class="nav-item">
-                    <a class="nav-link" href="kids.html">Kids</a>
+                    <!--<a class="nav-link" href="kids.html">Kids</a>-->
                 </li>
                 <!-- Shoes Category -->
                 <li class="nav-item">
@@ -43,7 +43,7 @@
                 </li>
                 <!-- Sale Category - Highlighted -->
                 <li class="nav-item">
-                    <a class="nav-link text-danger fw-bold" href="sale.html">Cart</a>
+                    <a class="nav-link text-danger fw-bold" href="cart.html">Cart</a>
                 </li>
             </ul>
             
