--- a/men.html
+++ b/men.html
@@ -43,9 +43,9 @@
                 </li>
                 <!-- Sale Category - Highlighted -->
                 <li class="nav-item">
-                    <a class="nav-link text-danger fw-bold" href="sale.html">Cart</a>
+                    <a class="nav-link text-danger fw-bold" href="cart.html">Cart</a>
                 </li>
-                 <!-- about Category -->
+                
             </ul>
             
             <!-- Search Form -->
