--- a/shoes.html
+++ b/shoes.html
@@ -38,10 +38,10 @@
                     <a class="nav-link" href="kids.html">Kids</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-danger fw-bold" href="sale.html">Cart</a>
+                    <a class="nav-link text-danger fw-bold" href="cart.html">Cart</a>
                      <!-- about Category -->
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">Shoes</a>
+                    <!--<a class="nav-link" href="about.html">Shoes</a>-->
                 </li>
             </ul>
             
