--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <!-- Home Link -->
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <!--<a class="nav-link active" aria-current="page" href="index.html">Home</a>-->
                 </li>
                 <!-- Men's Category -->
                 <li class="nav-item">
@@ -43,7 +43,7 @@
                 </li>
                 <!-- Sale Category - Highlighted -->
                 <li class="nav-item">
-                    <a class="nav-link text-danger fw-bold" href="sale.html">SALE</a>
+                    <a class="nav-link text-danger fw-bold" href="cart.html">Cart</a>
                 </li>
             </ul>
             
