--- a/women.html
+++ b/women.html
@@ -67,7 +67,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Womens' suit</h6>
                         <p class="card-text">$79.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                         </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                     <div class="card-body">
                         <h6 class="card-title">African Print</h6>
                         <p class="card-text">$93.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Elegant Wedding Dress</h6>
                         <p class="card-text">$400.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Red Zolique Off Shoulder Ruffle Trim Wrap Hem Bodycon Dress</h6>
                         <p class="card-text">$39.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Costarellos</h6>
                         <p class="card-text">$52.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Max Mara</h6>
                         <p class="card-text">$55.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                     <div class="card-body">
                         <h6 class="card-title">SIMKHAI</h6>
                         <p class="card-text">$65.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -137,7 +137,7 @@
                     <div class="card-body">
                         <h6 class="card-title">The Sei Silk Charmeuse bra top </h6>
                         <p class="card-text">$31.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Sequin Jersey T-shirt</h6>
                         <p class="card-text">$21.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -157,7 +157,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Tank tops</h6>
                         <p class="card-text">$14.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
