--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Bomber Jacket</h6>
                         <p class="card-text">$99.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -192,7 +192,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Custom Jacket</h6>
                         <p class="card-text">$99.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Graffiti Tee</h6>
                         <p class="card-text">$99.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -214,7 +214,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Denim Jeans</h6>
                         <p class="card-text">$99.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
