--- a/kids.html
+++ b/kids.html
@@ -67,7 +67,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Bomber Jacket</h6>
                         <p class="card-text">$499.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Adidas Yeezy </h6>
                         <p class="card-text">$999.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -87,9 +87,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Jordan 4</h6>
                         <p class="card-text">$149.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
-                    </div>
-                </div>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card product-card">
@@ -97,7 +95,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Airforce nike</h6>
                         <p class="card-text">$69.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -107,7 +105,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Grunge Hoodie</h6>
                         <p class="card-text">$499.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -117,7 +115,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Baggy Denim Jeans</h6>
                         <p class="card-text">$499.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -127,7 +125,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Sleeve Crop Top</h6>
                         <p class="card-text">$499.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -137,7 +135,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Custom-Designed Jacket</h6>
                         <p class="card-text">$499.99</p>
-                        <button class="btn btn-primary btn-sm">Add to Cart</button>
+                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
                     </div>
                 </div>
             </div>
