--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     <a class="nav-link" href="shoes.html">Shoes</a>
                 </li>
                 <!-- Sale Category - Highlighted -->
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link text-danger fw-bold" href="cart.html">Cart</a>
-                </li>
+                </li> -->
             </ul>
             
             <!-- Search Form -->
@@ -132,7 +132,7 @@
                 <img src="images/sale.jpg" class="card-img-top" alt="Sale Items" height="400">
                 <div class="card-body">
                     <h5 class="card-title text-danger">SALES UP TO 50% OFF</h5>
-                    <a href="sale.html" class="btn btn-danger">Shop Sale</a>
+                    <button class="btn btn-danger">Shop Sale</button>
                 </div>
             </div>
         </div>
@@ -181,7 +181,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Bomber Jacket</h6>
                         <p class="card-text">$99.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -192,7 +192,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Custom Jacket</h6>
                         <p class="card-text">$99.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Graffiti Tee</h6>
                         <p class="card-text">$99.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -214,7 +214,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Denim Jeans</h6>
                         <p class="card-text">$99.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
