--- a/kids.html
+++ b/kids.html
@@ -42,9 +42,9 @@
                     <a class="nav-link" href="shoes.html">Shoes</a>
                 </li>
                 <!-- Sale Category - Highlighted -->
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link text-danger fw-bold" href="cart.html">Cart</a>
-                </li>
+                </li> -->
             </ul>
             
             <!-- Search Form -->
@@ -63,81 +63,31 @@
             <!-- Product 1 -->
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card product-card">
-                    <img src="images/bomber.webp" class="card-img-top" alt="Product 1">
+                    <img src="images/kids1.jpg" class="card-img-top" alt="Product 1" height="400">
                     <div class="card-body">
                         <h6 class="card-title">Bomber Jacket</h6>
-                        <p class="card-text">$499.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <p class="card-text">$9.99</p>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card product-card">
-                    <img src="images/yeezy.jpeg" class="card-img-top" alt="Product 1" height="400">
+                    <img src="images/kids2.jpg" class="card-img-top" alt="Product 1" height="400">
                     <div class="card-body">
                         <h6 class="card-title">Adidas Yeezy </h6>
-                        <p class="card-text">$999.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <p class="card-text">$9.99</p>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card product-card">
-                    <img src="images/jordan.avif" class="card-img-top" alt="Product 1" height="400">
+                    <img src="images/kids3.jpg" class="card-img-top" alt="Product 1" height="400">
                     <div class="card-body">
                         <h6 class="card-title">Jordan 4</h6>
-                        <p class="card-text">$149.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-4">
-                <div class="card product-card">
-                    <img src="images/nike.webp" class="card-img-top" alt="Product 1" height="400">
-                    <div class="card-body">
-                        <h6 class="card-title">Airforce nike</h6>
-                        <p class="card-text">$69.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-4">
-                <div class="card product-card">
-                    <img src="images/grunge.avif" class="card-img-top" alt="Product 1">
-                    <div class="card-body">
-                        <h6 class="card-title">Grunge Hoodie</h6>
-                        <p class="card-text">$499.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-4">
-                <div class="card product-card">
-                    <img src="images/denim.webp" class="card-img-top" alt="Product 1" height="400">
-                    <div class="card-body">
-                        <h6 class="card-title">Baggy Denim Jeans</h6>
-                        <p class="card-text">$499.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-4">
-                <div class="card product-card">
-                    <img src="images/sleeve.jpg" class="card-img-top" alt="Product 1">
-                    <div class="card-body">
-                        <h6 class="card-title">Sleeve Crop Top</h6>
-                        <p class="card-text">$499.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-4">
-                <div class="card product-card">
-                    <img src="images/jacket.jpeg" class="card-img-top" alt="Product 1">
-                    <div class="card-body">
-                        <h6 class="card-title">Custom-Designed Jacket</h6>
-                        <p class="card-text">$499.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
-                    </div>
-                </div>
+                        <p class="card-text">$9.99</p>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
             </div>
             <!-- Add more products here -->
         </div>
