--- a/men.html
+++ b/men.html
@@ -42,9 +42,9 @@
                     <a class="nav-link" href="shoes.html">Shoes</a>
                 </li>
                 <!-- Sale Category - Highlighted -->
-                <li class="nav-item">
-                    <a class="nav-link text-danger fw-bold" href="cart.html">Cart</a>
-                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link text-danger fw-bold">Cart</a>
+                </li> -->
                 
             </ul>
             
@@ -68,7 +68,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Bomber Jacket</h6>
                         <p class="card-text">$499.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Short Sleeve Shirt</h6>
                         <p class="card-text">$29.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Jordan 4</h6>
                         <p class="card-text">$149.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Airforce nike</h6>
                         <p class="card-text">$69.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Grunge Hoodie</h6>
                         <p class="card-text">$499.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Baggy Denim Jeans</h6>
                         <p class="card-text">$499.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Beach Shorts</h6>
                         <p class="card-text">$499.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Custom-Designed Jacket</h6>
                         <p class="card-text">$499.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
