--- a/shoes.html
+++ b/shoes.html
@@ -37,12 +37,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="kids.html">Kids</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link text-danger fw-bold" href="cart.html">Cart</a>
                      <!-- about Category -->
                 <li class="nav-item">
                     <!--<a class="nav-link" href="about.html">Shoes</a>-->
-                </li>
+                </li> -->
             </ul>
             
             <!-- Search Form -->
@@ -65,7 +65,7 @@
                     <div class="card-body">
                         <h6 class="card-title">nike</h6>
                         <p class="card-text">$69.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                     <div class="card-body">
                         <h6 class="card-title">nike air</h6>
                         <p class="card-text">$299.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                     <div class="card-body">
                         <h6 class="card-title">nike</h6>
                         <p class="card-text">$699.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Pink Jordans</h6>
                         <p class="card-text">$999.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Adidas</h6>
                         <p class="card-text">$99.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Court shoes</h6>
                         <p class="card-text">$299.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Pointed Stiletto</h6>
                         <p class="card-text">$399.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -137,7 +137,7 @@
                     <div class="card-body">
                         <h6 class="card-title">Pointed Stiletto</h6>
                         <p class="card-text">$399.99</p>
-                        <a href="cart.html" class="btn btn-primary btn-sm">Add to Cart</a>
+                        <button class="btn btn-primary btn-sm">Add to Cart</button>
                     </div>
                 </div>
             </div>
